--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,10 @@
 {
-    "name": "jasny/sso",
+    "name": "tw88/sso",
     "description": "Simple Single Sign-On",
     "keywords": ["sso", "auth"],
     "license": "MIT",
-    "homepage": "http://www.jasny.net/articles/simple-single-sign-on-for-php/",
-    "authors": [
-        {
-            "name": "Arnold Daniels",
-            "email": "arnold@jasny.net",
-            "homepage": "http://www.jasny.net"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/jasny/sso/issues",
-        "source": "https://github.com/jasny/sso"
-    },
     "require": {
-        "php": ">=5.5.0",
+        "php": ">=5.6.0",
         "desarrolla2/cache": "^2.0.0",
         "jasny/validation-result": "^1.0.0",
         "guzzlehttp/guzzle": "^6.3"
@@ -27,7 +15,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Jasny\\SSO\\": "src/"
+            "tw88\\SSO\\": "src/"
         }
     }
 }
